Fixed dark mode display bug

--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,6 @@
   background-color: black;
   color: white;
   text-decoration-color: white;
-  --text-secondary: white;
 
 }
 #light {
